# transcription

./: .gitignore  README.md  cli_tools.py  main.py  pyproject.toml
transcription/: audio_extractor.py  latex_generator.py  prompt_template.txt  template_latex.txt  template_typst.typ  text_processor.py  transcriber.py  typst_generator.py
