[project]
name = "transcription"
version = "0.1.0"
description = "A tool to convert MP4 lectures into Typst notes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk>=3.9.1",
    "openai>=1.82.1",
    "python-dotenv>=1.1.0",
    "pywhispercpp",
]

[tool.uv.sources]
pywhispercpp = { git = "https://github.com/absadiki/pywhispercpp" }
